addition of tier styles, added in headings styles work

--- a/frontend/common/app/assets/stylesheets/_head.common.scss
+++ b/frontend/common/app/assets/stylesheets/_head.common.scss
@@ -41,3 +41,15 @@
 @import "layout/footer";
 @import "layout/header";
 @import "layout/headings";
+
+
+/* ==========================================================================
+   content
+   ========================================================================== */
+@import "content";
+
+
+/* ==========================================================================
+   headings
+   ========================================================================== */
+@import "components/headings";
