--- a/frontend/common/app/assets/stylesheets/_vars.scss
+++ b/frontend/common/app/assets/stylesheets/_vars.scss
@@ -205,6 +205,9 @@ $c-statusNeutral: $c-neutral2;
 $c-statusNegative: #da1d1d;
 
 
+@import "components/bower-components/guss-colours/_colours.scss";
+@import "components/bower-components/guss-colours/_helpers.scss";
+
 // MPU
 // =============================================================================
 
