--- a/frontend/common/app/assets/stylesheets/style.scss
+++ b/frontend/common/app/assets/stylesheets/style.scss
@@ -23,6 +23,7 @@
 
 @import "pages/events";
 @import "pages/joiner";
+@import "pages/tier";
 
 
 /* ==========================================================================
