--- a/frontend/common/app/assets/stylesheets/_vars.scss
+++ b/frontend/common/app/assets/stylesheets/_vars.scss
@@ -236,3 +236,6 @@ $mem-brandOrange: #ce6f14;
 $mem-brandBlue: #82c2d6;
 $mem-brandGrey: #dcddda;
 $mem-trans-white: rgba(255,255,255,0.8);
+
+$mem-button-confirm: #1a4683;
+$mem-button-cancel: #b8b8b8;
