--- a/frontend/common/app/assets/stylesheets/components/_action.scss
+++ b/frontend/common/app/assets/stylesheets/components/_action.scss
@@ -95,3 +95,24 @@
         background-color: #E1E1E1;
     }
 }
+
+.form-action {
+    color: #FFFFFF;
+    padding: $gs-gutter / 2;
+    margin-top: $gs-gutter;
+    text-align: center;
+    display: inline-block;
+    cursor: pointer;
+    @include rem((
+        min-width: $gs-baseline * 6
+    ));
+}
+
+.form-action--confirm {
+    background-color: $mem-button-confirm;
+    border: 3px solid $mem-button-confirm;
+}
+
+.form-action--cancel {
+    background-color: $mem-button-cancel;
+}
