--- a/frontend/app/views/tier/change.scala.html
+++ b/frontend/app/views/tier/change.scala.html
@@ -8,13 +8,8 @@
     <main>
         <a href="@Config.idWebAppUrl/account/edit">My Profile</a>
         <h1>Change Membership Package</h1>
-        <form action="/tier/downgrade/confirm" method="POST">
-            <input type="submit" value="Downgrade"/>
-        </form>
-        <form action="/tier/upgrade/confirm" method="POST">
-            <input type="submit" value="Upgrade"/>
-        </form>
-        <a href="@Config.idWebAppUrl/account/edit" class="action action-cancel">Cancel</a>
+        <a href="/tier/downgrade/confirm" class="form-action form-action--confirm">Downgrade</a>
+        <a href="@Config.idWebAppUrl/membership/edit" class="form-action form-action--cancel">Cancel</a>
     </main>
 </div>
 
