--- a/frontend/app/views/tier/downgrade/summary.scala.html
+++ b/frontend/app/views/tier/downgrade/summary.scala.html
@@ -1,7 +1,29 @@
-@(subscription: model.Stripe.Subscription, card: model.Stripe.Card)(implicit request: play.api.mvc.Request[_])
+@()(implicit request: play.api.mvc.Request[_])
+
+@import configuration.Config
 
 @main("Membership - Down Grade Tier Summary") {
 
-
+<div class="page-container">
+    <main role="main">
+        <div class="content__container">
+            <section class="l-row content__section">
+                <article class="l-row__item l-row__item--boost-2 secondary-content">
+                    <h1 class="content__headline">Sorry to see you go...</h1>
+                    <p>You will continue to receive all the great Membership Benefits until</p>
+                </article>
+            </section>
+        </div>
+        @partials.tier.summary()
+        <section>
+            <div class="l-row l-row--items-2">
+                <div class="l-row__item"></div>
+                <div class="l-row__item l-row__item--boost-2 secondary-content">
+                    <a href="@Config.idWebAppUrl/account/edit" class="form-action form-action--confirm">My Profile</a>
+                </div>
+            </div>
+        </section>
+    </main>
+</div>
 
 }
