--- a/frontend/app/views/tier/downgrade/confirm.scala.html
+++ b/frontend/app/views/tier/downgrade/confirm.scala.html
@@ -11,7 +11,7 @@
                     <p class="item__title">You will no longer receive all the great benefits</p>
                 </article>
                 <aside class="l-row__item">
-                    <h2 class="content__heading tone-news-one">Downgrade info</h2>
+                    <h2 class="content__heading tone-news-one">You will no longer receive all the great benefits</h2>
                 </aside>
             </section>
         </div>
@@ -24,7 +24,7 @@
                     <div class="item">
                         <h3 class="item__title">Digital</h3>
                         <div class="u-responsive-ratio">
-                            <img src="@routes.Assets.at("images/placeholder.jpg")" alt="Digital Benefits"/>
+                            <img src="" alt="Digital Benefits"/>
                         </div>
                         <ul>
                             <li class="item__list-element">Vestibulum ante ipsum primis</li>
@@ -38,7 +38,7 @@
                     <div class="item">
                         <h3 class="item__title">Community</h3>
                         <div class="u-responsive-ratio">
-                            <img src="@routes.Assets.at("images/placeholder-1.jpg")" alt="Digital Benefits"/>
+                            <img src="" alt="Digital Benefits"/>
                         </div>
                         <ul>
                             <li class="item__list-element">Sit amet libero congue pulvinar</li>
@@ -52,7 +52,7 @@
                     <div class="item">
                         <h3 class="item__title">Live</h3>
                         <div class="u-responsive-ratio">
-                            <img src="@routes.Assets.at("images/placeholder-2.jpg")" alt="Digital Benefits"/>
+                            <img src="" alt="Digital Benefits"/>
                         </div>
                         <ul>
                             <li class="item__list-element">Donec rhoncus tristique</li>
