--- a/frontend/app/views/tier/downgrade/confirm.scala.html
+++ b/frontend/app/views/tier/downgrade/confirm.scala.html
@@ -38,7 +38,7 @@
                     <div class="item">
                         <h3 class="item__title">Community</h3>
                         <div class="u-responsive-ratio">
-                            <img src="" alt="Digital Benefits"/>
+                            <img src="" alt="Community Benefits"/>
                         </div>
                         <ul>
                             <li class="item__list-element">Sit amet libero congue pulvinar</li>
@@ -52,7 +52,7 @@
                     <div class="item">
                         <h3 class="item__title">Live</h3>
                         <div class="u-responsive-ratio">
-                            <img src="" alt="Digital Benefits"/>
+                            <img src="" alt="Live Benefits"/>
                         </div>
                         <ul>
                             <li class="item__list-element">Donec rhoncus tristique</li>
