removed alt tags for the moment

--- a/frontend/app/views/tier/cancel/confirm.scala.html
+++ b/frontend/app/views/tier/cancel/confirm.scala.html
@@ -71,7 +71,7 @@
                     <div class="item">
                         <h3 class="item__title">Digital</h3>
                         <div class="u-responsive-ratio">
-                            <img src="" alt="Digital Benefits"/>
+                            <img src="" alt=""/>
                         </div>
                         <ul>
                             <li class="item__list-element">Vestibulum ante ipsum primis</li>
@@ -85,7 +85,7 @@
                     <div class="item">
                         <h3 class="item__title">Community</h3>
                         <div class="u-responsive-ratio">
-                            <img src="" alt="Community Benefits"/>
+                            <img src="" alt=""/>
                         </div>
                         <ul>
                             <li class="item__list-element">Sit amet libero congue pulvinar</li>
@@ -99,7 +99,7 @@
                     <div class="item">
                         <h3 class="item__title">Live</h3>
                         <div class="u-responsive-ratio">
-                            <img src="" alt="Live Benefits"/>
+                            <img src="" alt=""/>
                         </div>
                         <ul>
                             <li class="item__list-element">Donec rhoncus tristique</li>
