--- a/frontend/app/views/tier/cancel/confirm.scala.html
+++ b/frontend/app/views/tier/cancel/confirm.scala.html
@@ -8,7 +8,7 @@
             <section class="l-row l-row--items-2 content__section">
                 <article class="l-row__item l-row__item--boost-2 secondary-content">
                     <h1 class="content__headline">Become a Friend for free</h1>
-                    <a href="/join/friend" class="form-action form-action--confirm">Become a Friend</a>
+                    <a href="/join/friend" class="action-cta action-cta--confirm">Become a Friend</a>
                 </article>
                 <aside class="l-row__item">
                     <h2 class="content__heading tone-news-one">
@@ -117,7 +117,7 @@
                 <div class="l-row__item l-row__item--boost-2 secondary-content">
                     <form action="/tier/cancel/confirm" method="POST">
                         <p class="item__title">You will still be a registered Guardian user</p>
-                        <input type="submit" value="Cancel Membership" class="form-action form-action--confirm"/>
+                        <input type="submit" value="Cancel Membership" class="action-cta action-cta--confirm"/>
                     </form>
                 </div>
             </div>
