--- a/frontend/app/views/tier/cancel/summary.scala.html
+++ b/frontend/app/views/tier/cancel/summary.scala.html
@@ -35,7 +35,7 @@
         </div>
         <section class="content__container right-align">
             <a href="">Profile FAQ's</a>
-            <a href="@Config.idWebAppUrl/account/edit" class="form-action form-action--confirm">My Profile</a>
+            <a href="@Config.idWebAppUrl/account/edit" class="action-cta action-cta--confirm">My Profile</a>
         </section>
     </main>
 </div>
