--- a/frontend/app/views/tier/downgrade/confirm.scala.html
+++ b/frontend/app/views/tier/downgrade/confirm.scala.html
@@ -70,8 +70,8 @@
                 <div class="l-row__item l-row__item--boost-2 secondary-content">
                     <form action="/tier/downgrade/confirm" method="POST">
                         <h3 class="item__title">Proceed with downgrade?</h2>
-                        <a href="/tier/change" class="form-action form-action--cancel">No</a>
-                        <input type="submit" value="Yes" class="form-action form-action--confirm"/>
+                        <a href="/tier/change" class="action-cta action-cta--cancel">No</a>
+                        <input type="submit" value="Yes" class="action-cta action-cta--confirm"/>
                     </form>
                 </div>
             </div>
