--- a/frontend/app/views/tier/downgrade/summary.scala.html
+++ b/frontend/app/views/tier/downgrade/summary.scala.html
@@ -36,7 +36,7 @@
             </section>
         </div>
         <section class="content__container right-align">
-            <a href="@Config.idWebAppUrl/account/edit" class="form-action form-action--confirm">My Profile</a>
+            <a href="@Config.idWebAppUrl/account/edit" class="action-cta action-cta--confirm">My Profile</a>
         </section>
     </main>
 </div>
