--- a/frontend/app/views/joiner/tier/friend.scala.html
+++ b/frontend/app/views/joiner/tier/friend.scala.html
@@ -11,7 +11,12 @@
     <section class="joiner-section joiner-section--left-aligned joiner-section--no-border ">
         <h1 class="section-headline u-text-hyphenate">Purpose/Value</h1>
         <h2 class="section-sub-headline u-text-hyphenate">Friend &#163;Free</h2>
-        <p><a class="action action--inline-text action--join" href="/join/friend/thankyou">Join</a><a href="#whats-included" class="hidden-mobile">Whats Included</a></p>
+        <p>
+            <form class="form--inline" method="POST">
+                <button class="action action--inline-text action--join">Join</button>
+            </form>
+            <a href="#whats-included" class="hidden-mobile">Whats Included</a>
+        </p>
     </section>
 
     <section class="joiner-navigation hidden-mobile">
