--- a/frontend/common/app/assets/stylesheets/components/_action.scss
+++ b/frontend/common/app/assets/stylesheets/components/_action.scss
@@ -5,6 +5,7 @@
     padding: $gutter/2 $gutter;
     color: #FFFFFF;
     cursor: pointer;
+    border: 0;
     text-decoration: none;
     &:visited,
     &:hover,
