Show current period end in downgrade summary

--- a/frontend/app/views/tier/downgrade/summary.scala.html
+++ b/frontend/app/views/tier/downgrade/summary.scala.html
@@ -11,7 +11,7 @@
                 <div class="l-row__item"></div>
                 <article class="l-row__item l-row__item--boost-2 secondary-content">
                     <h1 class="content__headline">Sorry to see you go...</h1>
-                    <p>You will continue to receive all the great Membership Benefits until <span style="color:red; font-weight:bold; font-size: 2em;">DATE HERE</span></p>
+                    <p>You will continue to receive all the great Membership Benefits until @subscription.current_period_end.pretty</p>
                 </article>
             </section>
         </div>
